openshift-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-app
spec:
  selector:
    app: hello-go-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
