openshift-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-go-app
spec:
  to:
    kind: Service
    name: hello-go-app
